# rol-font-renderer

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/common/shaders/: frag.glsl  vertex.glsl
examples/common/utils/: CMakeLists.txt
examples/common/utils/include/: shader.h
examples/common/utils/src/: shader.c
examples/gnu-unifont/: CMakeLists.txt  main.c
examples/opengl/: CMakeLists.txt  main.c
examples/opengl/shaders/: frag.glsl  vertex.glsl
examples/terminal/: CMakeLists.txt  main.c
include/: errors.h  font_loader.h  glyph.h
include/display/: string.h  texture.h
include/display/opengl/: opengl.h
include/loaders/: bdf.h
scripts/: download_example_fonts.sh
src/: errors.c  font_loader.c
src/display/: string.c  texture.c
src/display/opengl/: opengl.c
src/loaders/: bdf.c
